#       Copyright S.A.Mitchell (s.mitchell@auckland.ac.nz), 2007-
#       Copyright F.Peschiera (pchtsp@gmail.com), 2019-
# See the LICENSE file for copyright information.
2.7.0
    added HiGHS solver
    added pysmps dependency for mps parsing
2.6.0 2021-12-04
    dropped packaged choco
    fixed bugs
    deprecated 'indexs' parameter LpVariable dicts and matrix
2.5.1 2021-09-28
    updated docs
    fixed minor issues
    cbc now uses wall-time for timeLimit
2.5.0 2021-08-11
    measuring wall time and cpu time
    unittests of timeLimit
    black formatting
    refactored tests per solver
    dropped support for CPLEX_DLL
2.4 2020-12-22
    added mps reading support
    updated docs
    fix bug with no objective in prob.toDict()
2.3.1 2020-10-22
    change naming of solver utility functions to camelcase
    fixed gurobi license detection
    fixed scip options and added timeLimit argument
    changed docs
2.3 2020-08-04
    Added plugin page in docs
    Standardize arguments of solvers to appear in docs
    Fixes to import and export of LpProblem and solver
    Added warm start to GUROBI
2.2 2020-04-06
    Contribution files
    Standard arguments: logPath, gapRel, gapAbs
    Import and export solver objects
    Import and export LpProblem
    Took out amply to its own package
    Standard tmp file handling in _CMD solvers
    Refactored writeMPS    
2.1 2020-04-06
    Added MOSEK solver
    New documentation
    Put tests inside package
    Added warm start to CPLEX_PY
2.0 2019-11-23
    Restructured solvers code
    Added unittests package
    Added CHOCO solver
    Added warm start for CBC_CMD, GUROBI_CMD, CPLEX_CMD
    Automated deploy
1.6.1, 2015-12-25
    Fix for dummy variables
1.5.4, 2013-03-18
    Added cbc support for osx (hopefully)
1.4.9, 2011-03-30
    Added support for cplex runtime licenses
    Made PULP_CBC_CMD the default LP solver for linux
    Included 32 and 64 bit versions of cbc
1.4.8, 2011-03-30
    Overdue fix for zero coeff issue